--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,13 +19,16 @@ html {
     background-color: blueviolet;
 }
 .rightBlock {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-size: 2rem;
     color: rgb(238, 238, 238);
     top: 0;
     right: 0;
-    width: 40rem;
+    width: 25%;
     height: 100%;
-    background-color: rgb(188, 176, 199);
+    background-color: #1c1325;
 
 }
 .wrapper {
@@ -37,7 +40,7 @@ html {
     justify-content: center;
     width: 100%;
     height: 100%;
-    background-color: $lightBackground;
+    background-color: #352b40;
 }
 .startPageBox {
     border: 1px solid rgb(0, 0, 0);
@@ -127,9 +130,9 @@ font-size: 3rem;
 .leftBlock{
     top: 0;
     left: 0;
-    width: 30rem;
+    width: 20%;
     height: 100%;
-    background-color: rgb(188, 176, 199);
+    background-color: #1c1325;
 }
 
 .test {
@@ -147,8 +150,8 @@ cursor: pointer;
     height: 100%;
 }
 .game {
-    width: 100%;
-    height: 80%;
+    width: 60%;
+    height: 93%;
     align-self: flex-start;
     /* width: 900px; */
     /* border: 2px solid blue; */
@@ -158,8 +161,10 @@ cursor: pointer;
 }
 .volumeBox{
     display: flex;
-    width: 15rem;
-    height: 2rem;
+    justify-content: center;
+    align-items: flex-end;
+    width: 90%;
+    height: 3rem;
     border: 1px solid blue;
     box-sizing: border-box;
 }
@@ -208,40 +213,42 @@ cursor: pointer;
 }
 
 .title {
-    height: 7rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 4rem;
     font-size: 3rem;
-    align-self: center;
-    justify-self: center;
+  
     color: rgb(0, 0, 0);
 }
 
 .field {
     /* border: 1px solid red; */
-    width: 300px;
-    height: 300px;
+    width: 30rem;
+    height: 30rem;
     align-self: center;
     justify-self: center;
   
 }
 .fieldCell {
-    font-size: 2rem;
+    font-size: 1.7rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60px;
-    height: 60px;
-    border: 1px solid rgb(227, 231, 231);
+    width: 4.5rem;
+    height: 4.5rem;
+    border: 1px solid #46a9a9;
     border-collapse: collapse;
     float: left;
     box-sizing: border-box;
 background-color: $lightCell;
 border-radius: 1rem;
 color: rgb(255, 255, 255);
-
+transition: 1s;
 }
 .none {
-background-color: rgb(227, 231, 231);
-color:  rgb(227, 231, 231);
+background-color: #352b40;
+color:#352b40;
 border: none;
 pointer-events: none;
 }
@@ -251,62 +258,71 @@ pointer-events: none;
 }
 
 .lettersGame {
-    font-size: 2rem;
+    color: aliceblue;
+    font-size: 1.7rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
+    width: 4.5rem;
+    height: 4.5rem;
     border: 1px solid black;
     float: left;
     box-sizing: border-box;
-    background-color: rgb(1, 138, 138);
+    background-color: #054c4c;
     cursor: pointer;
     transition: 0.5s;
 }
 
 .lettersGame:hover {
-    background-color: rgb(184, 219, 219);
+    background-color: rgb(10, 99, 99);
 }
 
 .word {
-    font-size: 2rem;
+    font-size: 1.7rem;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50px;
-    height: 50px;
+    width: 4.5rem;
+    height: 4.5rem;
     border: 1px solid black;
     float: left;
     box-sizing: border-box;
+    
 }
 
 .wordField {
-    width: 250px;
-    height: 50px;
- 
+    width: 35rem;
+    height: 4.5rem;
     align-self: center;
     justify-self: center;
-    background-color: rgba(75, 179, 80, 0.37);
+    background-color: #373548;
+    margin-top: 0.5rem;
+    color:aliceblue;
+}
+.full{
+    width: 6rem;
+    height: 5rem; 
 }
 .btnFullScreen {
-    background-color: rgb(105, 237, 100);
+    background-color: rgb(21, 3, 54);
     color: cornsilk;
-    width: 5rem;
-    height: 5rem;
-    font-size: 2rem;
+    width: 6rem;
+    height: 3rem;
+    font-size: 1.3rem;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    align-self: center;
-    justify-self: center;
+    margin-right: 1rem;
+    text-align: center;
+    border: 1px solid #4e547b;
+    border-radius: 1rem;
 }
 .btnOk {
     background-color: $lightBtn;
     color: cornsilk;
-    width: 5rem;
-    height: 5rem;
+    width: 24rem;
+    height: 4rem;
     font-size: 2rem;
     display: flex;
     align-items: center;
@@ -318,15 +334,16 @@ pointer-events: none;
 .btnRepeat {
     background-color: $lightBtn;
     color: cornsilk;
-    width: 5rem;
-    height: 5rem;
+    width: 10rem;
+    height: 4rem;
     font-size: 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
     cursor: pointer;
     align-self: center;
-    justify-self: center;   
+    justify-self: center;  
+    margin-left: 1rem; 
 }
 .countCorrect {
     display: flex;
@@ -335,68 +352,118 @@ pointer-events: none;
     background-color: rgb(12, 95, 33);
     font-size: 1.8rem;
     color: cornsilk;
-    width: 5rem;
-    height: 5rem;
+    width: 90%;
+    height: 3rem;
 }
 .countIncorrect {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(0, 0, 0);
+    background-color: #611b1b;
     font-size: 1.8rem;
     color: cornsilk;
-    width: 5rem;
-    height: 5rem;
+  width: 90%;
+    height: 3rem;
 }
 .btnBox {
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    margin-top: 2rem;
+    justify-content: center;
+}
+.btnClear{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #3b3b8a;
+    font-size: 1.8rem;
+    color: cornsilk;
+    width: 10rem;
+    height: 4rem;
+    cursor: pointer;
+    margin-left: 1rem;
+}
+
+.inCorrectBox, .correctBox{
+    width: 100%;
+    font-size: 1.8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.StatisticsBox {
+    width: 90%;
+    height: 37%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #434658;
+    border-radius: 1rem;
+    margin-top: 1rem; 
+}
+.helpBox{
+    width: 90%;
+    height: 17%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #434658;
+    border-radius: 1rem;
+margin-top: 1rem;
 }
 .btnNext {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: $lightBtn;
+    background-color: #3b3b8a;
     font-size: 1.8rem;
     color: cornsilk;
-    width: 5rem;
-    height: 5rem;
+    width: 90%;
+    height: 3rem;
     cursor: pointer;
+    margin-top: 1rem;
+
 }
 
 .btnAutoFinish {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: $lightBtn;
+    background-color: #3b3b8a;
     font-size: 1.8rem;
-    color: rgb(8, 8, 8);
-    width: 5rem;
-    height: 5rem;
+    color: cornsilk;
+    width: 90%;
+    height: 3rem;
     cursor: pointer;
+    margin-top: 0.5rem;
 }
 .winnerBox {
-    font-size: 5rem;
+font-size: 3rem;
     display: flex;
     align-items: center;
-    justify-content: center;
-    border: 1px solid rgb(0, 0, 0);
-    width: 50%;
-    height: 50%;
-    background-color: $lightStartMenu;    
+    justify-content: flex-start;
+    border: 1px solid black;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    padding-top: 1rem;
+    flex-direction:column;
 }
-
-.incorrectUnswer {
+.rotateFinish{
+// border: 2px solid red;
+animation: 1s main-rotate both infinite;
+}
+.incorrectAnswer {
     border: 2px solid red;
 animation: 0.1s tremor ease-out;
 }
 
 .winnerGame {
     border: 2px solid rgb(0, 255, 149);
-animation: 2s main-rotate ease-out;
+// animation: 2s main-rotate ease-out;
 }
 
 @keyframes tremor {
@@ -419,11 +486,26 @@ animation: 2s main-rotate ease-out;
     }
 }
 
+// @keyframes main-rotate {
+//   0% {
+//     transform: rotateY(0);
+//   }
+//   50% {
+//     transform: rotateY(180deg);
+//   }
+//   100% {
+//     transform: rotateY(360deg);
+//   }
+// }
+
 @keyframes main-rotate {
-    0% {
-    transform: skewY(0);
-    }
-    100% {
-    transform: skewY(30deg);
-    }
+//   0% {
+// transform: translate(2rem, 1rem);
+//   }
+//   50% {
+// transform: translate(1rem, -5rem);
+//   }
+//   100% {
+// transform: translate(5rem, 3rem);
+//   }
 }
